[project]
name = "carbonplan-cgenie"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.0",
    "coiled>=1.118.4",
    "jupyter>=1.1.1",
    "jupyter-server-proxy>=4.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
